--- a/view/frontend/layout/checkout_onepage_success.xml
+++ b/view/frontend/layout/checkout_onepage_success.xml
@@ -11,12 +11,12 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <referenceBlock name="scandi_gtm_head">
-        <block class="Scandi\Gtm\Block\Success" name="gtm_head" template="layer.phtml" cacheable="false"/>
-    </referenceBlock>
+    <!--<referenceBlock name="scandi_gtm_head">-->
+        <!--<block class="Scandi\Gtm\Block\Success" name="gtm_head" template="layer.phtml" cacheable="false"/>-->
+    <!--</referenceBlock>-->
     <body>
-        <referenceBlock name="scandi_gtm_body">
-            <block class="Scandi\Gtm\Block\Success" name="gtm_body" template="layer.phtml" cacheable="false"/>
-        </referenceBlock>
+        <!--<referenceBlock name="scandi_gtm_body">-->
+            <!--<block class="Scandi\Gtm\Block\Success" name="gtm_body" template="layer.phtml" cacheable="false"/>-->
+        <!--</referenceBlock>-->
     </body>
 </page>
