--- a/view/frontend/templates/pushes.phtml
+++ b/view/frontend/templates/pushes.phtml
@@ -10,8 +10,4 @@
 /** @var $block \Scandi\Gtm\Block\Gtm */
 ?>
 
-<?= $block->getGtm('body');
-if ($block->configHelper->isEnabled()) {
-    echo $block->injectScript("noscript");
-}
-?>
+<?= $block->dataLayer->gatherPushes() ?>
