--- a/view/frontend/layout/gtm_index_index.xml
+++ b/view/frontend/layout/gtm_index_index.xml
@@ -2,7 +2,8 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Scandi\Gtm\Block\DataLayer" name="gtm_datalayer" cacheable="false"/>
+            <block ifconfig="scandi_gtm/general/enable" class="Scandi\Gtm\Block\DataLayer"
+                   name="gtm_datalayer" cacheable="false"/>
         </referenceContainer>
     </body>
 </page>
