Develop functionality to push option data on the checkout. Develop child - parent skus differentiation

--- a/view/frontend/templates/head.phtml
+++ b/view/frontend/templates/head.phtml
@@ -65,6 +65,7 @@
                                     "id": product.id,
                                     "name": product.name,
                                     "price": product.price,
+                                    "brand": product.brand,
                                     "category": product.category,
                                     "position": product.position
                                 }]
