Restructure extension to handle pushes on the FE in order to get page data first

--- a/view/frontend/templates/head.phtml
+++ b/view/frontend/templates/head.phtml
@@ -103,6 +103,11 @@
                         }
                     }
                     dataLayer.push(responce);
+                    if (urlPart === 'gtm/index/general' && typeof(pushes) !== 'undefined') {
+                        $.each(pushes, function(){
+                            eval(this.valueOf());
+                        })
+                    }
                 }
             });
         }
