--- a/view/frontend/templates/pushes.phtml
+++ b/view/frontend/templates/pushes.phtml
@@ -10,4 +10,8 @@
 /** @var $block \Scandi\Gtm\Block\Gtm */
 ?>
 
-<?= $block->dataLayer->gatherPushes() ?>
+
+<script>
+    pushes = <?= $block->dataLayer->gatherPushes() ?>;
+</script>
+
